# BankSystem

./: .pre-commit-config.yaml  Cargo.toml  readme.md  test.txt
1. Основные фичи/: readme.md
1. Основные фичи/parser/: Cargo.toml
1. Основные фичи/parser/data/: test.csv
1. Основные фичи/parser/src/: lib.rs  types.rs
1. Основные фичи/parser/src/from/: txt.rs
1. Основные фичи/parser/src/to/: bin.rs  csv.rs  txt.rs
2. Сеть и многопоточность/monitor/: Cargo.toml
2. Сеть и многопоточность/monitor/examples/: demo.rs
2. Сеть и многопоточность/monitor/src/: lib.rs  logging.rs  receiver.rs  sender.rs
2. Сеть и многопоточность/quote/: Cargo.toml
2. Сеть и многопоточность/quote/src/: client.rs  tcp_worker.rs
2. Сеть и многопоточность/quote/src/types/: error.rs  macros.rs  mod.rs  reciever.rs
2. Сеть и многопоточность/quote/src/types/state/: macros.rs  state.rs
3. Асинхронность и веб/bank/backend/: Cargo.toml
3. Асинхронность и веб/bank/backend/examples/: cli.rs
3. Асинхронность и веб/bank/backend/migrations/: 0001_init.sql  0002_transactions.sql  0003_courses.sql
3. Асинхронность и веб/bank/backend/src/: main.rs
3. Асинхронность и веб/bank/backend/src/application/: account.rs  course.rs  mod.rs  transaction.rs  user.rs
3. Асинхронность и веб/bank/backend/src/data/: mod.rs  transaction.rs
3. Асинхронность и веб/bank/backend/src/data/sql/: account.rs  course.rs  mod.rs  token.rs  transactions.rs  user.rs
3. Асинхронность и веб/bank/backend/src/data/state/: account.rs  course.rs  mod.rs  token.rs  transactions.rs  user.rs
3. Асинхронность и веб/bank/backend/src/domain/: _macros.rs  account.rs  course.rs  mod.rs  token.rs  transaction.rs  user.rs
3. Асинхронность и веб/bank/backend/src/infrastructure/: config.rs  error.rs  logging.rs  migrate.rs  security.rs  state.rs
3. Асинхронность и веб/bank/backend/src/presentation/: consts.rs  mod.rs
3. Асинхронность и веб/bank/backend/src/presentation/api/: account.rs  course.rs  mod.rs  transaction.rs  user.rs
3. Асинхронность и веб/bank/backend/src/utils/: call_with_retry.rs  mod.rs
3. Асинхронность и веб/bank/exchange/: Cargo.toml  build.rs
3. Асинхронность и веб/bank/exchange/examples/: client_example.rs
3. Асинхронность и веб/bank/exchange/src/: client.rs  lib.rs  main.rs  server.rs
3. Асинхронность и веб/blog/: .gitignore  Cargo.toml  README.md
3. Асинхронность и веб/blog/backend/: .env.example  Cargo.toml  build.rs
3. Асинхронность и веб/blog/backend/migration/src/: lib.rs  m20260208_094916_user.rs  m20260208_175902_post.rs  m20260210_034214_auth.rs
3. Асинхронность и веб/blog/backend/proto/: dto.proto  exchange.proto  post.proto  user.proto
3. Асинхронность и веб/blog/backend/src/: main.rs
3. Асинхронность и веб/blog/backend/src/application/: auth.rs  mod.rs  post.rs  user.rs
3. Асинхронность и веб/blog/backend/src/data/: mod.rs
3. Асинхронность и веб/blog/backend/src/domain/: auth.rs  post.rs  user.rs
3. Асинхронность и веб/blog/backend/src/infrastructure/: config.rs  database.rs  errors.rs  logging.rs  migrations.rs  mod.rs  security.rs  state.rs
3. Асинхронность и веб/blog/backend/src/preserntation/: mod.rs
3. Асинхронность и веб/blog/backend/src/utils/: cookie.rs  mod.rs  save_img.rs
3. Асинхронность и веб/blog/cli/: Cargo.toml
3. Асинхронность и веб/blog/cli/src/: main.rs
3. Асинхронность и веб/blog/cli/src/model/: auth.rs  mod.rs  post.rs  user.rs
3. Асинхронность и веб/blog/client/: Cargo.toml  build.rs
3. Асинхронность и веб/blog/client/examples/: cli.rs  test.rs
3. Асинхронность и веб/blog/client/proto/: auth.proto  general.proto  post.proto  user.proto
3. Асинхронность и веб/blog/client/src/: lib.rs
3. Асинхронность и веб/blog/client/src/cli/: auth.rs  post.rs  types.rs  user.rs
3. Асинхронность и веб/blog/client/src/grpc/: auth.rs  general.rs  mod.rs  post.rs  user.rs  utils.rs
3. Асинхронность и веб/blog/client/src/http/: auth.rs  general.rs  mod.rs  post.rs  user.rs
3. Асинхронность и веб/blog/client/src/types/: auth.rs  general.rs  mod.rs  post.rs  user.rs
3. Асинхронность и веб/blog/frontend/: Cargo.toml  readme.md
3. Асинхронность и веб/blog/frontend/src/: auth.rs  general.rs  lib.rs  post.rs  user.rs  utils.rs
3. Асинхронность и веб/blog/frontend/static/: index.html
5. Отладка и оптимизация/optimization-practice/: Cargo.toml  readme.md
5. Отладка и оптимизация/optimization-practice/benches/: json_bench.rs
5. Отладка и оптимизация/optimization-practice/src/: lib.rs  main.rs
7. Blockchain разработка/proof_of_work/: Cargo.toml  readme.md
7. Blockchain разработка/proof_of_work/src/: api.rs  block.rs  libs.rs  main.rs  miner.rs  state.rs  tx.rs
7. Blockchain разработка/solana_first_program/game_lever/: Cargo.toml
7. Blockchain разработка/solana_first_program/game_lever/src/: entrypoint.rs  error.rs  lib.rs  processor.rs
7. Blockchain разработка/solana_first_program/game_lever/tests/: portal_lever.rs
7. Blockchain разработка/solana_first_program/hello_client/: Cargo.toml
7. Blockchain разработка/solana_first_program/hello_client/src/: main.rs
7. Blockchain разработка/vaultboard/: Cargo.toml
7. Blockchain разработка/vaultboard/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
7. Blockchain разработка/vaultboard/tests/: integration.rs
bank-system/: Cargo.toml  (+1 more)
monitor/: Cargo.toml
monitor/examples/: demo_features.rs
monitor/src/: lib.rs  metrics.rs  receiver.rs  sender.rs
parser/: Cargo.toml  readme.md
parser/src/: errors.rs  lib.rs  types.rs
parser/src/from/: bin.rs  csv.rs  errors.rs  mod.rs  txt.rs
parser/src/to/: bin.rs  csv.rs  errors.rs  mod.rs  txt.rs
quote/: Cargo.toml  readme.md
quote/examples/: client.py
quote/src/: client.rs  distributor.rs  lib.rs  master.rs  message.rs  session.rs  stock.rs  tcp_worker.rs  udp_worker.rs  worker.rs
quote/src/extractor/: console.rs  file.rs  mod.rs  random.rs
quote/src/types/: command.rs  error.rs  guard.rs  message.rs  mod.rs  reciever.rs  state.rs  stock.rs
quote/src/types/state/: guard.rs  macros.rs  mod.rs  state.rs
(+299 files in other folders)
