[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[features]
default = ["random"]
random = ["dep:rand"]
sqlite = []
logging = ["dep:log", "dep:env_logger"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = { version = "0.9", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
