[package]
name = "parser"
version = "0.7.0"
edition = "2024"

[dependencies]
bank = { path = "../bank" }
csv = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
