[package]
name = "quote"
version = "0.6.0"
edition = "2024"

[features]
default = ["checking", "logging"]
logging = ["dep:log", "dep:env_logger"]
checking = []

[dependencies]
log = { version = "0.4", optional = true }
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = "0.9"
env_logger = { version = "0.11", optional = true }
# CLI конструктор
clap = { version = "4", features = ["derive"] }
# bounded channel
crossbeam = "0.8"
# Обработка ошибок
thiserror = "2.0"
# Mutex, RwLock без Result
parking_lot = "0.12"
