[package]
name = "monitor"
version = "0.2.5"
edition = "2024"

[features]
default = ["random"]
random = ["dep:rand"]
sqlite = []
logging = ["dep:log", "dep:env_logger"]

[dependencies]
serde = { workspace = true }
bincode = "1.3"
rand = { workspace = true, optional = true }
log = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
