[package]
name = "quote"
version = "0.6.0"
edition = "2024"

[features]
default = ["checking", "logging"]
logging = ["dep:log", "dep:env_logger"]
checking = []

[dependencies]
log = { workspace = true, optional = true }
bincode = { version = "2.0", features = ["serde"] }
serde = { workspace = true }
serde_json = { version = "1.0" }
rand = { workspace = true }
env_logger = { workspace = true, optional = true }
# CLI конструктор
clap = { version = "4", features = ["derive"] }
# bounded channel
crossbeam = "0.8"
# Обработка ошибок
thiserror = "2.0"
# Mutex, RwLock без Result
parking_lot = "0.12"
