[workspace]
resolver = "3"
members = ["backend", "client", "frontend"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
