[package]
name = "optimization-practice"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
debug = 1 

[[bench]]
name = "json_bench"
harness = false

