[package]
name = "proof_of_work"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
hex = "0.4.3"
rand = "=0.8.5"
rust-crypto = "0.2.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync", "rt-multi-thread"] }
