[package]
name = "vaultboard"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.1.0"
borsh = "1.5.0"
borsh-derive = "1.5.0"
thiserror = "2.0.0"

[dev-dependencies]
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
