[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
actix-web = "4"
actix-session = { version = "0.11", features = ["cookie-session"] }
actix-cors = "0.7"
serde_json = "1"
async-trait = "0.1"
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
argon2 = "0.5"
password-hash = "0.5"
jsonwebtoken = "8"
anyhow = "1"
thiserror = "1"
env_logger = "0.11"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
getset = "0.1"
regex = "1.12"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.13", features = ["json"] }
