[package]
name = "exchange"
version = "0.1.0"
edition = "2024"

[lib]
name = "exchange"
path = "src/lib.rs"

[[bin]]
name = "exchange_server"
path = "src/main.rs"

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
rand = "0.9"
tokio-stream = "0.1"
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
