[package]
name = "backend"
version = "0.1.5"
edition = "2024"
build = "build.rs"

[dependencies]
sea-orm = { version = "2.0.0-rc.30", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
] }
axum = "0.8"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
getset = "0.1"
argon2 = "0.5"
sha2 = "0.10"
uuid = { version = "1", features = ["serde", "v4"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
migration = { path = "./migration" }
