[package]
name = "backend"
version = "0.6.5"
edition = "2024"
build = "build.rs"

[dependencies]
sea-orm = { version = "2.0.0-rc.30", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
] }
axum = { version = "0.8", features = ['tokio'] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
getset = "0.1"
argon2 = "0.5"
sha2 = "0.10"
uuid = { workspace = true, features = ["serde", "v4"] }
async-trait = "0.1"
chrono = { workspace = true, features = ["serde"] }
dotenvy = "0.15"
migration = { path = "./migration" }
regex = "1.12"
hex = "0.4"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
rand = "0.10"
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tonic-prost = { workspace = true }
base64 = { workspace = true }
tower = "0.5"
futures-util = "0.3"
cookie = "0.18"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = "9"
utoipa-redoc = { version = "6", features = ["axum"] }

[build-dependencies]
tonic-prost-build = "0.14"
