[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
base64 = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
