[package]
name = "client"
version = "0.6.1"
edition = "2024"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:shlex"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
base64 = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.13", features = ["json", "cookies"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"], optional = true }
shlex = { version = "1.3", optional = true }

[build-dependencies]
tonic-prost-build = "0.14"
