[package]
name = "frontend"
version = "0.3.5"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-struct = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Headers",
    "ResponseType",
    "Response",
    "CookieStore",
    "Document",
] }
